Fixed some layout problems for tablet

--- a/interface/media/css/solidblocksmenu.css
+++ b/interface/media/css/solidblocksmenu.css
@@ -63,6 +63,7 @@ background: black url(../images/blockdefault.gif) center center repeat-x;
 
 .tabcontent li{
 display: inline;
+white-space: nowrap;
 }
 
 .tabcontent li a{
